--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout:                                 home
 
 title:                                  J1
-tagline:                                starter at gh pages
+tagline:                                build-in starter pages
 description: >
                                         Jekyll One Template. Gem-based template made for Jekyll.
                                         J1 meets Jekyll and Bootstrap. And makes a lot of friends.
