--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout:                                 home
 
 title:                                  J1
-tagline:                                build-in starter pages
+tagline:                                starter
 description: >
                                         Jekyll One Template. Gem-based template made for Jekyll.
                                         J1 meets Jekyll and Bootstrap. And makes a lot of friends.
@@ -18,7 +18,7 @@ robots:
   index:                                true
   follow:                               true
 
-analytics:                              false
+analytics:                              true
 advertising:                            false
 comments:                               false
 
